--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     </div>
 
                     <button type="button" @click="GainAccess()" class="btn btn-success btn-small" style="display:block; font-size:12px;margin:0 auto;">Check Customer</button>
+                    <br>
                 </div>
 
                 <div v-if="access_granted && idchecked" class="" style="padding:30px;;width:90%;margin:0 auto; margin-top:20px;background-color:#EEEEEE">
@@ -58,8 +59,10 @@
                     <input type="text" placeholder="Enter Customer ID Here.." v-model="Customer_id" class="form-control">
                     <br>
                     <button type="button" @click="CheckId()" class="btn btn-success btn-small" style="display:block; font-size:12px;margin:0 auto;">Approve Customer</button>
-                    <br>
+
                 </div>
+
+                <br>
 
                 <div v-if="!idchecked">
                     <table class=" table table-bordered list">
@@ -103,6 +106,13 @@
 
 
 
+                </div>
+
+
+                <div v-if="!idchecked" class="">
+
+                    <button type="button" @click="idchecked=true;check_id=0 ;check_gc = 0; check_bs = 0;check_pp = 0 ; check_ut= 0; " class="btn btn-info btn-small" style="display:block; font-size:12px;margin:0 auto;">New Customer</button>
+                    <br>
                 </div>
             </div>
 
