--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                         <tr>
                             <th>Proof Of ID </th>
                             <th>2 Passport Photo</th>
-                            <th>Utility Bill</th>
-                            <th>Bank Statement</th>
-                            <th>Guranrors Cheque</th>
+                            <!-- <th>Utility Bill</th>
+                            <th>Bank Statement</th> -->
+                            <th>Affidavits</th>
 
                         </tr>
                         <tr>
@@ -97,16 +97,16 @@
                                         <span v-if="check_pp == 0" class="glyphicon glyphicon-error">Not Aprroved</span>
                                       </button>
                             </td>
-                            <td><button type="button" data-toggle="modal" data-target="#myModal" @click="ModalComfirm(utility)" v-bind:class="{ 'btn-danger': check_ut == 0 }" :disabled="check_ut == 1" class="btn btn-small btn-primary">
+                            <!-- <td><button type="button" data-toggle="modal" data-target="#myModal" @click="ModalComfirm(utility)" v-bind:class="{ 'btn-danger': check_ut == 0 }" :disabled="check_ut == 1" class="btn btn-small btn-primary">
                                         <span  v-if="check_ut == 1" class="glyphicon glyphicon-ok">Aprroved</span>
                                         <span  v-if="check_ut == 0" class="glyphicon glyphicon-error"> Not Aprroved</span>
                                       </button>
-                            </td>
-                            <td> <button type="button" data-toggle="modal" data-target="#myModal" @click="ModalComfirm(banks)" :disabled="check_bs == 1" v-bind:class="{ 'btn-danger': check_bs == 0 }" class="btn btn-small btn-primary">
+                            </td> -->
+                            <!-- <td> <button type="button" data-toggle="modal" data-target="#myModal" @click="ModalComfirm(banks)" :disabled="check_bs == 1" v-bind:class="{ 'btn-danger': check_bs == 0 }" class="btn btn-small btn-primary">
                                         <span   v-if="check_bs == 1" class="glyphicon glyphicon-ok">Aprroved</span>
                                         <span   v-if="check_bs == 0" class="glyphicon glyphicon-error">Not Aprroved</span>
                                       </button>
-                            </td>
+                            </td> -->
                             <td><button type="button" data-toggle="modal" data-target="#myModal" v-bind:class="{ 'btn-danger': check_gc == 0 }" @click="ModalComfirm(guachk)" :disabled="check_gc == 1" class="btn btn-primary">
                                 <span   v-if="check_gc == 1" class="glyphicon glyphicon-ok">Aprroved</span>
                                 <span   v-if="check_gc == 0" class="glyphicon glyphicon-error">Not Aprroved</span>
@@ -124,9 +124,9 @@
                 <div v-if="!acknow && verify">
                     <table class=" table table-bordered list">
                         <tr>
-                            <th>Work Gurantor </th>
+                            <th>Work Guarantor </th>
                             <th>Personal Guarantor</th>
-                            <th>Customer Store</th>
+                            <th>Customer's Store/Office</th>
                            
                         </tr>
                         <tr>
